--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@ MathJax.Hub.Config({
 <p><strong>Now you want it in a</strong> <span style="color:#add8e6; font-weight:bold">PDF as a report to show your boss ...</span></p>
 <p><br></p>
 <p><strong>NOTEBOOK --&gt; PDF in under 5 mins</strong></p>
+<p>Example product: <a href="posts/example.pdf">example.pdf</a></p>
 <p>P.S. Instructions has only been tested on Mac Pro (Mavericks). User be cautious</p>
 <p class="more"><a href="posts/convert-ipython-notebook-to-pdf.html">Read more…</a></p>
 </div>
