--- a/stories/about.html
+++ b/stories/about.html
@@ -128,7 +128,7 @@ MathJax.Hub.Config({
             
         })
     </script>
-<div class="input">
+<div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
@@ -140,7 +140,7 @@ MathJax.Hub.Config({
 </div>
 </div>
 </div>
-<div class="input">
+<div class="cell border-box-sizing text_cell rendered">
 <div class="prompt input_prompt">
 </div>
 <div class="inner_cell">
